Increased the margin to fix the overlapping of the start and cancel button

--- a/src/aura/giftEntryForm/giftEntryForm.css
+++ b/src/aura/giftEntryForm/giftEntryForm.css
@@ -34,5 +34,5 @@
     left: 0;
 }
 .THIS.cardMargin {
-    margin-bottom: 200px;
+    margin-bottom: 240px;
 }
